deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-kubernetes-project
  template:
    metadata:
      namespace: nodejsapp
      labels:
        app: my-kubernetes-project
    spec:
      containers:
      - name: my-kubernetes-project
        image: aakashgaikwad/capstone1python:v1
        ports:
        - containerPort: 3000
