service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: nodejsapp
spec:
  selector:
    app: my-kubernetes-project
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30000
